# segment-anything-tensorrt

./: CMakeLists.txt  main.cpp  sam.h
